--- a/app/client/templates/genomeView/genomeView.css
+++ b/app/client/templates/genomeView/genomeView.css
@@ -24,15 +24,16 @@ text {
     fill: #000;
 }
 
-rect.chr-border {
-    stroke: #eee;
-    stroke-width:0.3px;
-    margin-bottom: 5px;
-    margin-top: 5px;
+rect.chr {
+	fill:blue;
+	stroke:pink;
+	stroke-width:5;
+	fill-opacity:0.1;
+	stroke-opacity:0.9;
 }
 
-text.mono {
-    font-size: 9pt;
+text .mono {
+    font-size: 3px;
     font-family: 'Montserrat', Consolas, courier;
-    fill: 'LightSlateGray';
+    fill: '#dfdfdf';
 }
