starting pooling together of Data Sources

--- a/app/client/templates/genomeView/genomeView.html
+++ b/app/client/templates/genomeView/genomeView.html
@@ -1,6 +1,6 @@
 <template name="genomeView">
 	<div class="container">
-        <div class="row pt mt">
+        <div class="row pt">
             <div class="col-xs-12">
 				<h1>Genome View</h1>
 				<div id="genomeviewArtboard"></div>
