--- a/app/client/templates/heatmap/heatmap.html
+++ b/app/client/templates/heatmap/heatmap.html
@@ -4,6 +4,7 @@
         <p><span id="repeat-subfamily"></span></p>
         <p><span id="max"></span></p>
         <p><span id="min"></span></p>
+        <!-- <p><span id="score"></span></p> -->
         <p><span><a href="#">Click to View Details</a></span></p>
     </div>
     <div class="container">
