--- a/app/client/templates/heatmap/heatmap.css
+++ b/app/client/templates/heatmap/heatmap.css
@@ -37,8 +37,10 @@ rect.cell-hover {
 
 text.mono {
     font-size: 9pt;
-    font-family: 'Montserrat', Consolas, courier;
-    fill: #252729;
+    /*font-family: 'Montserrat', Consolas, courier;*/
+    font-family: Arial;
+    fill: #36454F;
+    font-weight: bold;
 }
 
 text.text-selected {
@@ -89,6 +91,7 @@ text.text-hover {
     font-weight: bold;
     fill: #003366;
     padding-bottom: 5px;
+    font-family: Arial !important;
 }
 
 .tcaMetadataLabelg {
@@ -97,4 +100,15 @@ text.text-hover {
     font-weight: bold;
     fill: #003366;
     padding-bottom: 5px;
+    font-family: Arial !important;
 }
+
+.legendText {
+    font-family: Helvetica;
+    font-size: 9px;
+    font-weight: lighter;
+    text-align: center;
+}
+
+
+
