--- a/app/client/templates/heatmap/heatmap.html
+++ b/app/client/templates/heatmap/heatmap.html
@@ -1,10 +1,19 @@
 <template name="Heatmap">
     <div id="tooltip" class="hidden">
-        <p><span id="experiment"></span></p>
-        <p><span id="repeat-subfamily"></span></p>
+        <table class="table">
+            <tr>
+                <th><span class="pull-left"><a href="#">Experiment : </a></span></th>
+                <th><span id="experiment"></span></th>
+            </tr>
+            <tr>
+                <th><span class="pull-left"><a href="#">Repeat Subfamily : </a></span></th>
+                <th><span id="repeat-subfamily"></span></th>
+            </tr>
+        </table>
+        <p><span id="score"></span></p>
         <p><span id="max"></span></p>
         <p><span id="min"></span></p>
-        <!-- <p><span id="score"></span></p> -->
+        
         <p><span><a href="#">Click to View Details</a></span></p>
     </div>
     <div class="container">
@@ -20,7 +29,7 @@
         {{#if browserReady }}
                     
                 {{else}}
-        <div class="row pt mt">
+        <div class="row pt centered">
                 <div class="col-xs-4">
                     <h5><a href="#">Loading ...</a></h5>        {{> Loading}}
                 </div>
