--- a/app/client/templates/consensusView/consensusView.html
+++ b/app/client/templates/consensusView/consensusView.html
@@ -5,21 +5,24 @@
         	<div id="main">
         		
                 <div class="row">
-                    <div class="col-xs-6">
+                    <div class="col-xs-5 col-xs-offset-1">
                         <div class="panel panel-danger">
                             <div class="panel-heading ">Dataset</div>
                                 <div class="panel-body centered">
                                     <h1 id="dataset">GM6728238</h1> 
+                                    <!-- <h5>Dataset name goes here</h5>  -->
                                 </div>
                         </div>
                     </div>
                 
                     
-                    <div class="col-xs-6" >
+                    <div class="col-xs-5" >
                         <div class="panel panel-success">
                             <div class="panel-heading ">Repeat Subfamily</div>
                                 <div class="panel-body centered">
-                                    <h1 id="subfam">MER41E</h1> 
+                                    <h1 id="subfam">MER41E</h1>
+                                    <!-- <h5 >Log odds ratio goes here</h5> -->
+
                                 </div>
                         </div>
                     </div>
@@ -27,44 +30,44 @@
 
                 <div class="col-xs-3 pull-right">
                                     <div class="panel-body text-center">
-                                        <a href="/gv" class="btn btn-success btn-sm">Go to Genome Context View</a>
+                                        <a href="/gv" class="btn btn-danger">Go to Genome Context View</a>
                                     </div>
                 </div>
                
                 
         		<div class="col-xs-12" id="artboard"></div>
 
-                <div class="col-xs-2" id="treatment1_label">              
+                <div class="container pt mt">
+                    <div class="col-xs-2" id="treatment1_label">            
                         <button class='btn btn-info cvbtn jsShowInfo'>Replicate 1</button>
-                </div>
-                <div class="col-xs-10" id="treatment1"></div>
+                    </div>
+                    <div class="col-xs-9" id="treatment1"></div>
 
-                <div class="col-xs-2" id="treatment2_label">
-                    <button class='btn btn-info cvbtn jsShowInfo'>Replicate 2</button>
-                </div>
-                <div class="col-xs-10" id="treatment2"></div>
+                    <div class="col-xs-2" id="treatment2_label">
+                        <button class='btn btn-info cvbtn jsShowInfo'>Replicate 2</button>
+                    </div>
+                    <div class="col-xs-9" id="treatment2"></div>
 
-                <div class="col-xs-2" id="treatment3_label">
-                    <button class='btn btn-info cvbtn hidden jsShowInfo'>Replicate 3</button>
-                </div>
-                <div class="col-xs-10" id="treatment3"></div>
+                    <div class="col-xs-2" id="treatment3_label">
+                        <button class='btn btn-info cvbtn hidden jsShowInfo'>Replicate 3</button>
+                    </div>
+                    <div class="col-xs-9" id="treatment3"></div>
 
-                <div class="col-xs-2" id="input1_label">
-                    <button class='btn btn-warning cvbtn jsShowInfo'>Input 1</button>
-                </div>
-                <div class="col-xs-10" id="input1"></div>
+                    <div class="col-xs-2" id="input1_label">
+                        <button class='btn btn-warning cvbtn jsShowInfo'>Input 1</button>
+                    </div>
+                    <div class="col-xs-9" id="input1"></div>
 
-                <div class="col-xs-2" id="input2_label">
-                    <button class='btn btn-warning cvbtn jsShowInfo'>Input 2</button>
-                </div>
-                <div class="col-xs-10" id="input2"></div>
+                    <div class="col-xs-2" id="input2_label">
+                        <button class='btn btn-warning cvbtn jsShowInfo'>Input 2</button>
+                    </div>
+                    <div class="col-xs-9" id="input2"></div>
 
-                <div class="col-xs-2" id="input3_label">
-                    <button class='btn btn-warning cvbtn jsShowInfo'>Input 3</button>
+                    <div class="col-xs-2" id="input3_label">
+                        <button class='btn btn-warning cvbtn jsShowInfo'>Input 3</button>
+                    </div>
+                    <div class="col-xs-9" id="input3"></div>
                 </div>
-                <div class="col-xs-10" id="input3"></div>
-
-        	
         </div>
     </div>
 </div>
