--- a/app/client/templates/showInfo/showInfo.html
+++ b/app/client/templates/showInfo/showInfo.html
@@ -6,48 +6,24 @@
                     <h4 class="modal-title">Details</h4>
                 </div>
                 <div class="modal-body">
-                  <div class="col-xs-5"> 
+                  <div class="col-xs-12"> 
                     <table class="table">
-                    <thead>
-                      <tr>
-                        <th>Type</th>
-                      </tr>
-                    </thead>
                     <tbody>
                         {{#each item in informationRows}}
-                          <tr class="success">
-                            <td></td>
-                            <td>{{item}}</td>
+                          <tr>
+                            <td class="success">{{item.name}}</td>
+                            <td class="danger">{{item.val}}</td>
                           </tr>
                         {{/each}}
                     </tbody>
                   </table>
                   </div> 
+              
 
-                  <div class="col-xs-6"> 
-                  <table class="table">
-                    <thead>
-                      <tr>
-                        <th>Value</th>
-                      </tr>
-                    </thead>
-                    <tbody>
-                        {{#each item in informationVal}}
-                          <tr class="danger">
-                            <td></td>
-                            <td>{{item}}</td>
-                          </tr>
-                        {{/each}}
-                    </tbody>
-                  </table>
-              </div>
-                  
-
-             
-                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-info" data-dismiss="modal">Close</button>
             
                 </div>
+              </div>
             </div>
         </div>
-    </div>
 </template>
