--- a/app/client/templates/select_te/select_te.css
+++ b/app/client/templates/select_te/select_te.css
@@ -1,10 +1,10 @@
-
+/*
 .jstree-default {
     display: block;
     float: left;
     margin-left: 150px;
     margin-top: 50px;
-}
+}*/
 
 .jstree-default .jstree-no-dots .jstree-closed > ins {
     background-position: 0 4px;
@@ -13,4 +13,8 @@
 .jstree a {
     width: 250px;
     text-align: left;
+}
+
+form {
+	margin-top: 20px;
 }
