Completed Select Subfam integration

--- a/app/client/templates/consensusView/consensusView.html
+++ b/app/client/templates/consensusView/consensusView.html
@@ -39,17 +39,17 @@
 
                 <div class="container pt mt">
                     <div class="col-xs-2" id="treatment1_label">            
-                        <button class='btn btn-info cvbtn jsShowInfo'>Replicate 1</button>
+                        <button class='btn btn-info cvbtn jsShowInfo'>Treatment 1</button>
                     </div>
                     <div class="col-xs-9" id="treatment1"></div>
 
                     <div class="col-xs-2" id="treatment2_label">
-                        <button class='btn btn-info cvbtn jsShowInfo'>Replicate 2</button>
+                        <button class='btn btn-info cvbtn jsShowInfo'>Treatment 2</button>
                     </div>
                     <div class="col-xs-9" id="treatment2"></div>
 
                     <div class="col-xs-2" id="treatment3_label">
-                        <button class='btn btn-info cvbtn hidden jsShowInfo'>Replicate 3</button>
+                        <button class='btn btn-info cvbtn hidden jsShowInfo'>Treatment 3</button>
                     </div>
                     <div class="col-xs-9" id="treatment3"></div>
 
