--- a/app/client/templates/select_te/select_te.html
+++ b/app/client/templates/select_te/select_te.html
@@ -12,7 +12,7 @@
                 <button class="btn btn-info" type="submit">Search</button>
             </form>
             <hr>
-            <a href="#" type="button" id="jsDoneSelectTE" class="btn btn-warning" style="margin-top: 20px">Done selecting</a>
+            <a href="/heatmap" type="button" id="jsDoneSelectTE" class="btn btn-warning" style="margin-top: 20px">Done selecting</a>
             </div><!-- end jumbotron -->
     </div> 
         <div class="col-sm-7 mt pt" id="tree"></div>
