--- a/app/client/templates/consensusView/consensusView.html
+++ b/app/client/templates/consensusView/consensusView.html
@@ -7,7 +7,7 @@
                 <div class="row">
                     <div class="col-xs-5 col-xs-offset-1">
                         <div class="panel panel-danger">
-                            <div class="panel-heading ">Dataset</div>
+                            <div class="panel-heading centered">Dataset</div>
                                 <div class="panel-body centered">
                                     <h1 id="dataset">GM6728238</h1> 
                                     <!-- <h5>Dataset name goes here</h5>  -->
@@ -18,7 +18,7 @@
                     
                     <div class="col-xs-5" >
                         <div class="panel panel-success">
-                            <div class="panel-heading ">Repeat Subfamily</div>
+                            <div class="panel-heading centered">Repeat Subfamily</div>
                                 <div class="panel-body centered">
                                     <h1 id="subfam">MER41E</h1>
                                     <!-- <h5 >Log odds ratio goes here</h5> -->
@@ -28,7 +28,7 @@
                     </div>
                 </div>
 
-                <div class="col-xs-3 pull-right">
+                <div class="col-xs-3 pull-right ">
                                     <div class="panel-body text-center">
                                         <a href="/gv" class="btn btn-danger">Go to Genome Context View</a>
                                     </div>
@@ -54,17 +54,17 @@
                     <div class="col-xs-9" id="treatment3"></div>
 
                     <div class="col-xs-2" id="input1_label">
-                        <button class='btn btn-warning cvbtn jsShowInfo'>Input 1</button>
+                        <button class='btn btn-success cvbtn jsShowInfo'>Input 1</button>
                     </div>
                     <div class="col-xs-9" id="input1"></div>
 
                     <div class="col-xs-2" id="input2_label">
-                        <button class='btn btn-warning cvbtn jsShowInfo'>Input 2</button>
+                        <button class='btn btn-success cvbtn jsShowInfo'>Input 2</button>
                     </div>
                     <div class="col-xs-9" id="input2"></div>
 
                     <div class="col-xs-2" id="input3_label">
-                        <button class='btn btn-warning cvbtn jsShowInfo'>Input 3</button>
+                        <button class='btn btn-success cvbtn jsShowInfo'>Input 3</button>
                     </div>
                     <div class="col-xs-9" id="input3"></div>
                 </div>
