--- a/app/client/templates/select_te/select_te.html
+++ b/app/client/templates/select_te/select_te.html
@@ -8,7 +8,7 @@
         <div class="col-sm-4">
             <div class="jumbotron centered">
             <form id="s">
-                Search a Repeat Element
+                <p>Search for a Repeat Element</p>
                 <input class="form-control" type="search" id="q" placeholder="LINE" />
                 <br/>
                 <button class="btn btn-info" type="submit">Search</button>
@@ -17,10 +17,11 @@
     </div> 
         <div class="col-sm-4" id="tree"></div>
         <div class="col-sm-4">
-            <div class="jumbotron">
+            <div class="jumbotron instructions">
              <li>There are 1395 Repeat elements classified into Classes and Families</li>   
             <li>Click Checkboxes on the left to select Repeat Classes</li>
             <li>Expand the tree to select Repeat Families or specific Subfamilies</li>
+            <li>Use Search box to find a Subfamily of interest</li>
             <li>Click the button below to update and go back to browser heatmap</li>
             <a href="/heatmap" type="button" id="jsDoneSelectTE" class="btn btn-warning" style="margin-top: 20px">Update Selection</a>
             </div>
