--- a/app/client/templates/select_te/select_te.css
+++ b/app/client/templates/select_te/select_te.css
@@ -1,3 +1,4 @@
+@import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,200);
 /*
 .jstree-default {
     display: block;
@@ -17,4 +18,9 @@
 
 form {
 	margin-top: 20px;
+}
+
+.instructions {
+	font-family: 'Source Sans Pro', sans-serif;
+	font-size: 15px;
 }
