working on slider

--- a/app/client/templates/consensusView/consensusView.html
+++ b/app/client/templates/consensusView/consensusView.html
@@ -30,7 +30,7 @@
 
                 <div class="col-xs-3 pull-right ">
                                     <div class="panel-body text-center">
-                                        <a href="/gv" class="btn btn-danger">Go to Genome Context View</a>
+                                        <a href="/gv" class="btn btn-danger gv">Go to Genome Context View</a>
                                     </div>
                 </div>
                
