--- a/app/client/templates/genomeView/genomeView.html
+++ b/app/client/templates/genomeView/genomeView.html
@@ -3,6 +3,8 @@
         <div class="row pt mt">
             <div class="col-xs-12">
 				<h1>Genome View</h1>
+                
+                {{> slider}}
 				<div id="genomeviewArtboard"></div>
 				{{#if pageReady }}
 					
