--- a/app/client/templates/genomeView/genomeView.css
+++ b/app/client/templates/genomeView/genomeView.css
@@ -25,10 +25,10 @@ text {
 }
 
 rect.chr {
-	fill:black;
-	stroke:pink;
+	fill:#212121;
+	stroke:#0288D1;
 	stroke-width:5;
-    stroke-location: outside;
+    stroke-alignment: inner;
 	fill-opacity:1.0;
 	stroke-opacity:0.9;
 }
