--- a/app/client/templates/slider/slider.css
+++ b/app/client/templates/slider/slider.css
@@ -14,6 +14,14 @@ circle {
   stroke: #f00;
 }
 
+.selecting circle.selectedNeg {
+  stroke: #FFC107;
+}
+
+.selecting circle.selectedPos {
+  stroke: #C2185B;
+}
+
 .resize path {
   fill: #666;
   fill-opacity: .8;
