Refactored Selection process on Genome View

--- a/app/client/templates/slider/slider.css
+++ b/app/client/templates/slider/slider.css
@@ -22,6 +22,10 @@ circle {
   stroke: #C2185B;
 }
 
+.selecting circle.selectedZero {
+  stroke: #E16D31;
+}
+
 .resize path {
   fill: #666;
   fill-opacity: .8;
