Fixed bug in select slider, made changes to Loading

--- a/app/client/templates/genomeView/genomeView.html
+++ b/app/client/templates/genomeView/genomeView.html
@@ -12,7 +12,9 @@
                    		</div>
                    	</div>
                 {{/if}}
+                <div id="wait" class='row centered hidden'>Updating ... </div>
                 <div id="genomeviewArtboard"></div>
+
             </div>
         </div>
 	</div>
