--- a/app/client/templates/heatmap/heatmap.html
+++ b/app/client/templates/heatmap/heatmap.html
@@ -1,4 +1,5 @@
 <template name="Heatmap">
+    {{> Loading}}
     <div id="tooltip" class="hidden">
         <table class="table">
             <tr>
