made changes to Loading

--- a/app/client/templates/consensusView/consensusView.html
+++ b/app/client/templates/consensusView/consensusView.html
@@ -3,7 +3,7 @@
         <div class="row pt mt">
         	<h1>Consensus View</h1>
         	<div id="main">
-        		
+        		{{> Loading}}
                 <div class="row">
                     <div class="col-xs-5 col-xs-offset-1">
                         <div class="panel panel-danger">
