Select Datasets - scaffolding done

--- a/app/client/templates/common/navbar/navbar.html
+++ b/app/client/templates/common/navbar/navbar.html
@@ -20,7 +20,7 @@
                     <li>{{#linkTo route="DatasetList"}}<i class="fa fa-database"></i> Admin - Datasets{{/linkTo}}</li>
                     <li>{{#linkTo route="SubfamList"}}<i class="fa fa-align-justify"></i> Admin - Subfamilies{{/linkTo}}</li>
                         {{else}}
-                        <li><a href="/data">
+                        <li><a href="/data/grid">
                             <i class="fa fa-database"></i> Datasets
                         </a>
                         </li>
