--- a/app/client/templates/heatmap/heatmap.html
+++ b/app/client/templates/heatmap/heatmap.html
@@ -25,7 +25,7 @@
         </div>
 
 
-    <div class="row">
+    <div class="row" id='gridContainer'>
         <div id="main" style='overflow:auto; width:{{getWidth}}px; height:{{getHeight}}px;'></div>
     </div>
     </div>
