--- a/app/client/templates/heatmap/heatmap.css
+++ b/app/client/templates/heatmap/heatmap.css
@@ -110,5 +110,15 @@ text.text-hover {
     text-align: center;
 }
 
+#gridContainer {
+    text-align: center;
+    overflow: auto;
+    width: 1200px;
+    height: 580px;
+    border: 1px solid #CCCCCC;
+    background-color: white;
+    
+    /*overflow: hidden;*/
+}
 
 
