start: building the grid

--- a/app/client/templates/datagrid/grid/grid.html
+++ b/app/client/templates/datagrid/grid/grid.html
@@ -1,7 +1,9 @@
 <template name="Grid">
-  <div class="col-xs-12 grid" id="gridContainer">
+  <div class="col-xs-12 grid">
         <div class="row pt mt centered">
-            <h3> d3 dataset selection chart goes here </h3>
+         
+		        <div id="selectiondatagrid"></div>
+	    	
         </div>
 	</div>
 </template>
