--- a/app/client/templates/datagrid/grid/grid.css
+++ b/app/client/templates/datagrid/grid/grid.css
@@ -1,10 +1,62 @@
 /*****************************************************************************/
 /* Grid: Style */
 /*****************************************************************************/
-.grid {
+@import url(http://fonts.googleapis.com/css?family=Montserrat:400,700);
+
+svg *::selection {
+    background : transparent;
 }
 
-#gridContainer {
+svg *::-moz-selection {
+    background:transparent;
+}
+
+svg *::-webkit-selection {
+    background:transparent;
+}
+rect.selection {
+    stroke          : #333;
+    stroke-dasharray: 4px;
+    stroke-opacity  : 0.5;
+    fill            : transparent;
+}
+
+rect.cell-border {
+    stroke: #eee;
+    stroke-width:0.3px;
+}
+
+rect.cell-selected {
+    stroke: rgb(51,102,153);
+    stroke-width:0.5px;
+}
+
+rect.cell-hover {
+    stroke: #F00;
+    stroke-width:0.3px;
+}
+
+text.mono {
+    font-size: 9pt;
+    /*font-family: 'Montserrat', Consolas, courier;*/
+    font-family: Arial;
+    fill: #36454F;
+    font-weight: bold;
+}
+
+text.text-selected {
+    fill: #000;
+}
+
+text.text-highlight {
+    fill: #c00;
+    font-weight: bold;
+}
+text.text-hover {
+    fill: #00C;
+}
+
+.grid {
 	text-align: center;
 	overflow: auto;
 	width: 1200px;
