user input capture complete

--- a/app/client/templates/datagrid/tissues/tissues.html
+++ b/app/client/templates/datagrid/tissues/tissues.html
@@ -8,93 +8,33 @@
         <ul class="nav nav-pills nav-justified">
           <li class="active"><a data-toggle="tab" href="#adult">Adult Cells/Tissues</a></li>
           <li><a data-toggle="tab" href="#cancer">Cancer Cells</a></li>
-          <li><a data-toggle="tab" href="#ips">ES/iPS Cells</a></li>
-          <li><a data-toggle="tab" href="#fetal">Fetal Cells/Tissues</a></li>
+          <li><a data-toggle="tab" href="#ips">ES / iPS Cells</a></li>
+          <li><a data-toggle="tab" href="#fetal">Fetal Cells/ Tissues</a></li>
         </ul>
         <p></p>
           <div class="tissues centered tab-content">
             <div id="adult" class="tab-pane fade in active">
               <!-- start -->
               <h3> </h3>
-              <table class="col-xs-4 table ">
-                <thead>
-                  <tr>
-                    <th><input type="checkbox" id='chkallTissues'></th>
-                    <th>Category</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  {{#each tissue in TissuesAdult}}
-                  <tr>
-                    <th><input type="checkbox" id='chk{{ formatSpace tissue}}'></th>
-                    <th>{{tissue}}</th>
-                  </tr>
-                  {{/each}}
-                </tbody>
-              </table>
+              {{> TissuesAdult }}
               <!-- end -->  
             </div> 
             <div id="cancer" class="tab-pane fade">
               <!-- start -->
               <h3> </h3>
-              <table class="col-xs-4 table ">
-                <thead>
-                  <tr>
-                    <th><input type="checkbox" id='chkallTissues'></th>
-                    <th>Category</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  {{#each tissue in TissuesCancerCells}}
-                  <tr>
-                    <th><input type="checkbox" id='chk{{tissue}}'></th>
-                    <th>{{tissue}}</th>
-                  </tr>
-                  {{/each}}
-                </tbody>
-              </table>
+              {{> TissuesCancer}}
               <!-- end -->  
             </div>
             <div id="ips" class="tab-pane fade">
               <!-- start -->
               <h3> </h3>
-              <table class="col-xs-4 table ">
-                <thead>
-                  <tr>
-                    <th><input type="checkbox" id='chkallTissues'></th>
-                    <th>Category</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  {{#each tissue in TissuesESiPScells}}
-                  <tr>
-                    <th><input type="checkbox" id='chk{{tissue}}'></th>
-                    <th>{{tissue}}</th>
-                  </tr>
-                  {{/each}}
-                </tbody>
-              </table>
+              {{> TissueESiPS }}
               <!-- end --> 
             </div>
             <div id="fetal" class="tab-pane fade">
               <!-- start -->
               <h3> </h3>
-              <table class="col-xs-4 table ">
-                <thead>
-                  <tr>
-                    <th><input type="checkbox" id='chkallTissues'></th>
-                    <th>Category</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  {{#each tissue in TissuesFetal}}
-                  <tr>
-                    <th><input type="checkbox" id='chk{{tissue}}'></th>
-                    <th>{{formatUndrscr tissue}}</th>
-                  </tr>
-                  {{/each}}
-                </tbody>
-              </table>
+              {{> TissueFetal }}
               <!-- end --> 
             </div>
           </div> <!-- end="tab-content" -->
