--- a/app/client/templates/datagrid/tissues/components/esips/tissues_esips.css
+++ b/app/client/templates/datagrid/tissues/components/esips/tissues_esips.css
@@ -1,16 +1,13 @@
 /*****************************************************************************/
-/* AssayCategories: Style */
+/* Tissues: Style */
 /*****************************************************************************/
-.assay-categories {
-}
-
-.assay-categories {
+.tissues {
 	text-align: center;
-	/*overflow: auto;*/
+	overflow: auto;
 	/*width: 200px;*/
-	height: 305px;
+	height: 200px;
 	border: 1px solid #CCCCCC;
 	background-color: white;
 	
-	overflow: hidden;
+	/*overflow: hidden;*/
 }
